add_subdirectory(cell_modem_daemon)
add_subdirectory(csac_daemon)
add_subdirectory(endpoint_adaptor)
add_subdirectory(endpoint_router)
add_subdirectory(factory_data_tool)
add_subdirectory(health_daemon)
add_subdirectory(image_table_tool)
add_subdirectory(metrics_daemon)
add_subdirectory(network_daemon)
add_subdirectory(nmea_daemon)
add_subdirectory(ntrip_daemon)
add_subdirectory(orion_daemon)
add_subdirectory(ota_daemon)
add_subdirectory(pfw_welcome)
add_subdirectory(piksi_leds)
add_subdirectory(piksi_system_daemon)
add_subdirectory(ports_daemon)
add_subdirectory(query_config)
add_subdirectory(resource_monitor)
add_subdirectory(sample_daemon)
add_subdirectory(sbp_cli)
add_subdirectory(sbp_fileio_daemon)
add_subdirectory(sbp_nmea_bridge)
add_subdirectory(sbp_rtcm3_bridge)
add_subdirectory(sbp_settings_daemon)
add_subdirectory(skylark_daemon)
add_subdirectory(standalone_file_logger)

